Updated filters , added spacing and responsive bug fixes for client

--- a/src/views/Clients/Read/clients.css
+++ b/src/views/Clients/Read/clients.css
@@ -18,6 +18,12 @@
   padding-bottom: 50px;
 }
 
+@media (max-width:600px) {
+  .all-clients{
+    padding-bottom: 110px;
+  }
+}
+
 .client-card {
   background-color: #efebf2;
   border-radius: 20px;
